# SCIMM_TESTER_TOOL

./: FileLoaderSCIMM.pro  README.md  calibracao.cpp  exibircores.cpp  exibircores.h  janelaprincipal.cpp  janelaprincipal.ui  scimm_cor.cpp
OBJETC_FINDER/: CMakeLists.txt  testedivisao.cpp
SCIMM_TESTER_TOOL/: janelaprincipal.h
